--- a/home/.config/conky/conky.conf
+++ b/home/.config/conky/conky.conf
@@ -25,7 +25,7 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'FantasqueSansMono Nerd Font:size=17',
+    font = 'Fantasque Sans Mono:size=17',
     gap_x = 60,
     gap_y = 60,
     minimum_height = 5,
@@ -51,8 +51,8 @@ conky.config = {
 }
 
 conky.text = [[
-${image ~/repos/theming/icons/png/arch.png -n -p 40,60 -s 256x256}
-${color #a89984}Info:$color ${scroll 32  $sysname $nodename $kernel $machine}
+# ${image ~/repos/theming/icons/png/arch.png -n -p 40,60 -s 256x256}
+${color #a89984}Info:$color ${scroll 32 $sysname $nodename $kernel $machine}
 $hr
 ${color #a89984}Uptime:$color $uptime
 ${color #a89984}Frequency (in MHz):$color $freq
