--- a/home/.config/systemd/user/google-drive-rclone.service
+++ b/home/.config/systemd/user/google-drive-rclone.service
@@ -5,7 +5,7 @@ AssertPathIsDirectory=/mnt/google-drive
 [Service]
 Type=simple
 ExecStart=/usr/bin/rclone mount \
-        --config=/home/filwie/.config/rclone/rclone.conf \
+        --config=%h/.config/rclone/rclone.conf \
         --allow-other \
         --cache-tmp-upload-path=/tmp/rclone/upload \
         --cache-chunk-path=/tmp/rclone/chunks \
